--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -1,25 +1,54 @@
-<div id="content"><header>
+<div id="content">
+  <header>
     <nav>
-        <div class="logo">
-            <h1 class="logo-item">&nbsp;Collabarray</h1>
-        </div>
-        <ul class="nav clearfix">
-            <li class="nav-items active"><a href="#!Home">Home</a></li>
-            <li class="nav-items dropdown"><a href="">Notes<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
-                <ul class="sub-menu clearfix">
-                    <li class="nav-items"><a href="#!Mine">Mine</a></li>
-                    <li class="nav-items"><a href="#!Friends">Friends</a></li>
-                    <li class="nav-items"><a href="#!Discover">Discover More</a></li>
-                </ul>
-            </li>
-            <li class="nav-items "><a href="#!Students">Students</a></li>
-            <li class="nav-items dropdown"><a href="">My Account<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
-                <ul class="sub-menu clearfix">
-                    <li class="nav-items"><a href="#!Personal-Details">Personal Details</a></li>
-                    <li class="nav-items"><a href="#!Settings">Settings</a></li>
-                </ul>
-            </li>
-            <li class="nav-items "><a href="#!About">About</a></li>
-        </ul>
+      <div class="logo">
+        <h1 class="logo-item">&nbsp;Collabarray</h1>
+      </div>
+      <ul class="nav clearfix">
+        <li class="nav-items active"><a href="#!Home">Home</a></li>
+        <li class="nav-items dropdown"><a href="">Notes<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
+          <ul class="sub-menu clearfix">
+            <li class="nav-items"><a href="#!Mine">Mine</a></li>
+            <li class="nav-items"><a href="#!Friends">Friends</a></li>
+            <li class="nav-items"><a href="#!Discover">Discover More</a></li>
+          </ul>
+        </li>
+        <li class="nav-items "><a href="#!Students">Students</a></li>
+        <li class="nav-items dropdown"><a href="">My Account<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
+          <ul class="sub-menu clearfix">
+            <li class="nav-items"><a href="#!Personal-Details">Personal Details</a></li>
+            <li class="nav-items"><a href="#!Settings">Settings</a></li>
+          </ul>
+        </li>
+        <li class="nav-items "><a href="#!About">About</a></li>
+      </ul>
     </nav>
-</header></div>
+  </header>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <form id="js-form">
+
+          <div class="form-group">
+            <label for="js-email">Email</label>
+            <input type="email" id="js-email" class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="js-password">Password</label>
+            <input type="password" id="js-password" class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="js-message">Message</label>
+            <input type="text" id="js-message" class="form-control">
+          </div>
+
+          <button type="submit" id="js-submit" class="btn btn-primary">Submit</button>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
