Added google and github Authentication. Need Domain to make it work

--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -44,6 +44,11 @@
           <button type="submit" id="btnLogIn" class="btn btn-primary">Log in</button>
           <button type="submit" id="btnSignUp" class="btn btn-secondary">Sign Up</button>
           <button type="submit" id="btnLogOut" class="btn btn-light hide">Log Out</button>
+          <br/>
+          <br/>
+          <button type="submit" id="btnSignInGithub" class="btn btn-block btn-social btn-github"><span class="fa fa-github"></span> Sign in with Github</button>
+          <br/>
+          <button type="submit" id="btnSignInGoogle" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Sign in with Google</button>
 
         </form>
       </div>
