Added Logo to Homepage

--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -1,58 +1,59 @@
 <link rel="stylesheet" href="css/home.css" />
 <div id="content">
-  <header>
-    <nav>
-      <div class="logo">
-        <h1 class="logo-item">&nbsp;Collabarray</h1>
-      </div>
-      <ul class="nav clearfix">
-        <li class="nav-items active"><a href="#!Home">Home</a></li>
-        <li class="nav-items dropdown"><a href="">Notes<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
-          <ul class="sub-menu clearfix">
-            <li class="nav-items"><a href="#!Mine">Mine</a></li>
-            <li class="nav-items"><a href="#!Friends">Friends</a></li>
-            <li class="nav-items"><a href="#!Discover">Discover More</a></li>
-          </ul>
-        </li>
-        <li class="nav-items "><a href="#!Students">Students</a></li>
-        <li class="nav-items dropdown"><a href="">My Account<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
-          <ul class="sub-menu clearfix">
-            <li class="nav-items"><a href="#!Personal-Details">Personal Details</a></li>
-            <li class="nav-items"><a href="#!Settings">Settings</a></li>
-          </ul>
-        </li>
-        <li class="nav-items "><a href="#!About">About</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <div class="logo">
+                <h1 class="logo-item">&nbsp;Collabarray</h1>
+            </div>
+            <ul class="nav clearfix">
+                <li class="nav-items active"><a href="#!Home">Home</a></li>
+                <li class="nav-items dropdown"><a href="">Notes<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
+                    <ul class="sub-menu clearfix">
+                        <li class="nav-items"><a href="#!Mine">Mine</a></li>
+                        <li class="nav-items"><a href="#!Friends">Friends</a></li>
+                        <li class="nav-items"><a href="#!Discover">Discover More</a></li>
+                    </ul>
+                </li>
+                <li class="nav-items "><a href="#!Students">Students</a></li>
+                <li class="nav-items dropdown"><a href="">My Account<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
+                    <ul class="sub-menu clearfix">
+                        <li class="nav-items"><a href="#!Personal-Details">Personal Details</a></li>
+                        <li class="nav-items"><a href="#!Settings">Settings</a></li>
+                    </ul>
+                </li>
+                <li class="nav-items "><a href="#!About">About</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <form id="js-form">
+    <div class="container">
+        <img src="img/logo/Collabarray-Logo.png" alt="Collabarray-Logo">
+        <div class="row">
+            <div class="col-md-12">
+                <form id="js-form">
 
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="txtEmail" class="form-control">
-          </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="txtEmail" class="form-control">
+                    </div>
 
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="txtPassword" class="form-control">
-          </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="txtPassword" class="form-control">
+                    </div>
 
-          <button type="submit" id="btnLogIn" class="btn btn-primary">Log in</button>
-          <button type="submit" id="btnSignUp" class="btn btn-secondary">Sign Up</button>
-          <button type="submit" id="btnLogOut" class="btn btn-light hide">Log Out</button>
-          <br/>
-          <br/>
-          <button type="submit" id="btnSignInGithub" class="btn btn-block btn-social btn-github"><span class="fa fa-github"></span> Sign in with Github</button>
-          <br/>
-          <button type="submit" id="btnSignInGoogle" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Sign in with Google</button>
+                    <button type="submit" id="btnLogIn" class="btn btn-primary">Log in</button>
+                    <button type="submit" id="btnSignUp" class="btn btn-secondary">Sign Up</button>
+                    <button type="submit" id="btnLogOut" class="btn btn-light hide">Log Out</button>
+                    <br/>
+                    <br/>
+                    <button type="submit" id="btnSignInGithub" class="btn btn-block btn-social btn-github"><span class="fa fa-github"></span> Sign in with Github</button>
+                    <br/>
+                    <button type="submit" id="btnSignInGoogle" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Sign in with Google</button>
 
-        </form>
-      </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <script src="js/home.js"></script>
