--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -26,36 +26,27 @@
         </nav>
     </header>
 
-    <div class="container">
-        <img src="img/logo/Collabarray-Logo.png" alt="Collabarray-Logo">
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <form id="js-form">
-
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="txtEmail" class="form-control">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="txtPassword" class="form-control">
-                    </div>
-
-                    <button type="submit" id="btnLogIn" class="btn btn-primary">Log in</button>
-                    <button type="submit" id="btnSignUp" class="btn btn-secondary">Sign Up</button>
-                    <button type="submit" id="btnLogOut" class="btn btn-light hide">Log Out</button>
-                    <br/>
-                    <br/>
-                    <button type="submit" id="btnSignInGithub" class="btn btn-block btn-social btn-github"><span class="fa fa-github"></span> Sign in with Github</button>
-                    <br/>
-                    <button type="submit" id="btnSignInGoogle" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Sign in with Google</button>
-
-                </form>
+    <img src="img/logo/Collabarray-Logo.png" alt="Collabarray-Logo">
+    <br>
+    <br>
+    <form id="js-form" style="border:1px solid #999">
+        <div class="container">
+            <label for="email"><b>Email:</b></label>
+            <input type="email" id="txtEmail" class="form-control" required>
+            <br>
+            <label for="password"><b>Password:</b></label>
+            <input type="password" id="txtPassword" class="form-control" required>
+            <div class="clearfix">
+                <button type="submit" id="btnLogIn" class="btn btn-primary">Log in</button>
+                <button type="submit" id="btnLogOut" class="btn btn-light hide">Log Out</button>
+                <button type="submit" id="btnSignUp" class="btn btn-secondary">Sign Up</button>
+            </div>
+            <div class="clearfix">
+                <button type="submit" id="btnSignInGithub" class="btn btn-block btn-social btn-github"><span class="fa fa-github"></span> Sign in with Github</button>
+                <br>
+                <button type="submit" id="btnSignInGoogle" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Sign in with Google</button>
             </div>
         </div>
-    </div>
+    </form>
 </div>
 <script src="js/home.js"></script>
