Code for adding project to database

--- a/public/views/addProject.html
+++ b/public/views/addProject.html
@@ -103,14 +103,14 @@
           <br>
           <div id="head3">
           <h5> Enter your project tags separated by a comma:</h5></div>
-          <input type="text" id="tags" style="width:500px;" placeholder="Enter Your Project Tags"></input>
+          <input type="text" id="projectTags" style="width:500px;" placeholder="Enter Your Project Tags"></input>
           <br>
           <br>
           <div id="head4">
           <h5> Enter the type of help you need separated by a comma:</h5></div>
           <input type="text" id="helpneeded" style="width:500px;" placeholder="eg Video Editor, Web Developer"></input>
           <br>
-          <input type="submit" value="Upload Project"></input> <!--Add onclick for javascript, separate tags and helpneeded, and send to db-->
+          <input type="submit" id="addProjectBtn" value="Upload Project"></input> <!--Add onclick for javascript, separate tags and helpneeded, and send to db-->
 
       </form>
 </div>
