--- a/public/views/Friends.html
+++ b/public/views/Friends.html
@@ -1,25 +1,1 @@
-<div id="content"><header>
-    <nav>
-        <div class="logo">
-            <h1 class="logo-item">&nbsp;Collabarray</h1>
-        </div>
-        <ul class="nav clearfix">
-            <li class="nav-items"><a href="#!Home">Home</a></li>
-            <li class="nav-items dropdown active"><a href="">Notes<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
-                <ul class="sub-menu clearfix">
-                    <li class="nav-items"><a href="#!Mine">Mine</a></li>
-                    <li class="nav-items active"><a href="#!Friends">Friends</a></li>
-                    <li class="nav-items"><a href="#!Discover">Discover More</a></li>
-                </ul>
-            </li>
-            <li class="nav-items "><a href="#!Students">Students</a></li>
-            <li class="nav-items dropdown"><a href="">My Account<span style="color:white; font-size: .75em;">&nbsp; &nbsp; &#x25bc;</span></a>
-                <ul class="sub-menu clearfix">
-                    <li class="nav-items"><a href="#!Personal-Details">Personal Details</a></li>
-                    <li class="nav-items"><a href="#!Settings">Settings</a></li>
-                </ul>
-            </li>
-            <li class="nav-items"><a href="#!About">About</a></li>
-        </ul>
-    </nav>
-</header></div>
+<div id="content"></div>
