--- a/src/Home.css
+++ b/src/Home.css
@@ -1,8 +1,21 @@
-.Home .container {
+.Home .container-fluid {
     background: #f2f2f2;
     width: auto;
     margin: 20px auto;
     border: thin solid #d4d4d4;
     border-radius: 5px;
     padding: 10px;
+}
+
+.Home .filter {
+    background: #f2f2f2;
+    width: auto;
+    margin: 20px auto;
+    border: thin solid #d4d4d4;
+    border-radius: 0 5px 5px 0;
+    padding: 10px;
+}
+
+.Home .table-head {
+    background-color: #333333;
 }
